# hyprmod

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  bldit.lua  install.sh  pyproject.toml
.github/workflows/: ci.yml
data/metainfo/: io.github.bluemancz.hyprmod.metainfo.xml
hyprmod/: cli.py  install.py  main.py  window.py
hyprmod/binds/: dialog.py  dispatchers.py
hyprmod/core/: bug_report.py  config.py  plugins.py  profiles.py  schema.py  settings.py  setup.py  undo.py  workspaces.py
hyprmod/data/schema/plugins/: hypr-dynamic-cursors.json
hyprmod/pages/: autostart.py  binds.py  layer_rules.py  plugins.py  section.py  settings.py  window_rules.py  workspaces.py
hyprmod/pages/monitors/: card.py  page.py
hyprmod/ui/: __init__.py  about.py  deprecation_controller.py  icons.py  lua_migration_controller.py  onboarding_dialog.py  plugin_setting_edit_dialog.py  sidebar.py  window_rule_dialog.py  workspace_rule_dialog.py
tests/: test_binds.py  test_bug_report.py  test_install.py  test_lua_mode.py  test_monitor_card_helpers.py  test_monitors_page.py  test_plugins.py  test_profiles_cli.py  test_workspaces.py
