[project]
name = "hyprmod"
version = "0.3.0"
description = "A native GTK4/libadwaita settings app for Hyprland"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "pygobject>=3.56.2",
    "hyprland-config>=0.6.6",
    "hyprland-schema>=0.6.1",
    "hyprland-state>=0.4.1",
    "hyprland-monitors>=0.7.0",
    "hyprland-socket>=0.12.1",
]

[dependency-groups]
dev = [
    "pygobject-stubs>=2.17.0",
    "pyright>=1.1",
    "pytest>=9.0",
    "ruff>=0.15.11",
]

[project.scripts]
hyprmod = "hyprmod.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]

[tool.pyright]
include = ["hyprmod", "tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-third-party = ["gi", "hyprland_config", "hyprland_schema", "hyprland_state", "hyprland_monitors", "hyprland_socket"]
